force-app/main/default/objects/PreFlight_Assumption__mdt/PreFlight_Assumption__mdt.object-meta.xml
<CustomObject>
    <label>Pre-Flight Assumption</label>
    <pluralLabel>Pre-Flight Assumptions</pluralLabel>
    <description>Config-as-data for the soft pre-check math (rate, term, debt headroom, display band). Editable without a deployment so the estimated range tracks the market instead of drifting when rates move.</description>
</CustomObject>