force-app/main/default/objects/PreFlight_Assumption__mdt/fields/Annual_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Rate__c</fullName>
    <label>Annual Rate</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>4</scale>
</CustomField>