force-app/main/default/objects/PreFlight_Assumption__mdt/fields/Band_Width__c.field-meta.xml
<CustomField>
    <fullName>Band_Width__c</fullName>
    <label>Band Width</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>4</scale>
</CustomField>