force-app/main/default/objects/PreFlight_Assumption__mdt/fields/Debt_Headroom__c.field-meta.xml
<CustomField>
    <fullName>Debt_Headroom__c</fullName>
    <label>Debt Headroom</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>4</scale>
</CustomField>