force-app/main/default/objects/PreFlight_Assumption__mdt/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <label>Term Months</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>0</scale>
</CustomField>